Fix shares box alignment on small screens

--- a/src/app/harvester-card/harvester-card.component.scss
+++ b/src/app/harvester-card/harvester-card.component.scss
@@ -4,6 +4,3 @@
 .shares-chart {
   height: 15rem;
 }
-.text-align-center {
-  text-align: center;
-}
